# open-nrf-ocd

./: .gitignore  CHANGES-v0.3.1.md  CHANGES-v0.3.2.md  CMakeLists.txt  CMakeLists_win.txt  HANDOFF.md  LICENSE  Makefile  README.md  build_all.sh  build_for_core.sh  build_release_binaries.sh  codex-session.txt  mingw64.cmake  nrf_ocd-linux-amd64  nrf_ocd-linux-arm64  nrf_ocd-linux-armhf  pi_session
include/: nrf_ocd.h  platform.h
src/: cli.c  cli.h  cmsis_dap.c  cmsis_dap.h  commander.c  commander.h  coresight.c  dap.c  dap.h  elf.c  elf.h  flash.c  flash.h  flash_algo.c  flash_algo_nrf54l.c  flash_algo_nrf54l.h  gdb_rsp.h  hex.c  hex.h  hid.h  hid_libusb.c  hid_linux.c  hid_macos.c  hid_windows.c  intelhex.c  log.c  log.h  main.c  nrf_ocd.c  nrf_ocd.h  probe.c  probe.h  swd.c  swd.h  target.c  target.h  target_nrf54l.c  target_nrf54lm20a.c  usb_backend.c  usb_backend_macos.c  (+4 more)
tests/: test_elf.c  test_hex.c  test_target.c
